// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/animation.md correctly 1`] = `
<div
  style="margin-bottom: 16px;"
>
  <div>
    <span
      style="display: inline-block;"
    >
      <span
        class="ant-tag"
      >
        Tag 1
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      style="display: inline-block;"
    >
      <span
        class="ant-tag"
      >
        Tag 2
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      style="display: inline-block;"
    >
      <span
        class="ant-tag"
      >
        Tag 3
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<span
  class="ant-tag"
>
  Tag 1
</span>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<span
  style="margin-right: 8px;"
>
  Categories:
</span>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Presets
  </span>
</div>
`;

exports[`renders ./components/tag/demo/colorful-inverse.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Presets Inverse
  </span>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<span
  class="ant-tag edit-tag"
>
  <span>
    Unremovable
  </span>
</span>
`;

exports[`renders ./components/tag/demo/controlled.md correctly 1`] = `
<span
  class="ant-tag"
>
  Movies
  <span
    aria-label="close"
    class="anticon anticon-close ant-tag-close-icon"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="close"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
      />
    </svg>
  </span>
</span>
`;

exports[`renders ./components/tag/demo/customize.md correctly 1`] = `
<span
  class="ant-tag"
>
  Tag1
  <span
    class="ant-tag-close-icon"
  >
    关 闭
  </span>
</span>
`;

exports[`renders ./components/tag/demo/icon.md correctly 1`] = `
<span
  class="ant-tag ant-tag-has-color"
  style="background-color: rgb(85, 172, 238);"
>
  <span
    aria-label="twitter"
    class="anticon anticon-twitter"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="twitter"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M928 254.3c-30.6 13.2-63.9 22.7-98.2 26.4a170.1 170.1 0 0075-94 336.64 336.64 0 01-108.2 41.2A170.1 170.1 0 00672 174c-94.5 0-170.5 76.6-170.5 170.6 0 13.2 1.6 26.4 4.2 39.1-141.5-7.4-267.7-75-351.6-178.5a169.32 169.32 0 00-23.2 86.1c0 59.2 30.1 111.4 76 142.1a172 172 0 01-77.1-21.7v2.1c0 82.9 58.6 151.6 136.7 167.4a180.6 180.6 0 01-44.9 5.8c-11.1 0-21.6-1.1-32.2-2.6C211 652 273.9 701.1 348.8 702.7c-58.6 45.9-132 72.9-211.7 72.9-14.3 0-27.5-.5-41.2-2.1C171.5 822 261.2 850 357.8 850 671.4 850 843 590.2 843 364.7c0-7.4 0-14.8-.5-22.2 33.2-24.3 62.3-54.4 85.5-88.2z"
      />
    </svg>
  </span>
  <span>
    Twitter
  </span>
</span>
`;

exports[`renders ./components/tag/demo/status.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Without icon
  </span>
</div>
`;
